wrong autocomplete with radius.
This issue was migrated from bug 3538 in our old bug tracker.
Original bug information:
Reporter: Lunxian
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows Server 2008
Platform: x86-64
Version: 1.2.0
Attachments:
force_fields_load.patch: patch for autocompletion to force fields loading if not already done
initialize_prefixes.patch: Kick proto_initialize_prefixes() from build_autocompletion_list()