From Bahaa Naamneh via Bug 3538:

This patch ensures that the filter autocompletion code handles protocols (radius and wimaxasncp) which uses delayed initialisation of protocols fields.

svn path=/trunk/; revision=29337